Updated for ansible 2.12.9

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 # vim: ai et ts=2 st=2 sw=2 :
 ---
-- name: check if we're running supported os
-  assert:
+- name: Check if we're running supported os
+  ansible.builtin.assert:
     fail_msg: "{{ role_name }} only supports ubuntu versions 16, 18, 20, 22,  centos versions 7 and rhel version 8!"
     success_msg: "{{ role_name }} supports {{ ansible_distribution }} version {{ ansible_distribution_version }}"
     quiet: "{{ not ansible_check_mode }}"
@@ -10,31 +10,31 @@
       or ( ansible_distribution|lower == "centos" and ansible_distribution_major_version|int in [7] )
       or ( ansible_distribution|lower == "redhat" and ansible_distribution_major_version|int in [8] )
 
-- name: specific config for debian and redhat systems
-  include: "{{ ansible_os_family | lower }}.yml"
+- name: Specific config for debian and redhat systems
+  ansible.builtin.include: "{{ ansible_os_family | lower }}.yml"
 
-- name: set sysctl
-  include: sysctl.yml
+- name: Set sysctl
+  ansible.builtin.include: sysctl.yml
   loop: '{{ sysctl_d | dict2items }}'
   loop_control:
     loop_var: outer_item
     label: '{{ outer_item.key }}'
 
-- name: find all files in sysctl.d
-  find:
+- name: Find all files in sysctl.d
+  ansible.builtin.find:
     paths: /etc/sysctl.d
     file_type: file
     patterns: '*.conf'
   register: sysctl_files
 
-- name: make list of exclusive files
-  set_fact:
-    sysctl_exclusive_files: '{{ sysctl_exclusive_files | default([]) + [ "/etc/sysctl.d/" + item ] }}'
+- name: Make list of exclusive files
+  ansible.builtin.set_fact:
+    sysctl_exclusive_files: '`{{ sysctl_exclusive_files | default([]) + ["/etc/sysctl.d/" + item] }}`'
   loop: '{{ sysctl_d | dict2items | map(attribute="key") | list }}'
   when: sysctl_exclusive
 
-- name: remove all non exclusive sysctl.d files
-  file:
+- name: Remove all non exclusive sysctl.d files
+  ansible.builtin.file:
     name: '{{ item }}'
     state: absent
   loop: '{{ sysctl_files.files | map(attribute="path") | list | difference(sysctl_exclusive_files) }}'
