--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,12 +9,10 @@
       ( ansible_distribution|lower == "ubuntu" and ansible_distribution_version|int in [16, 18, 20, 22] )
       or ( ansible_distribution|lower == "centos" and ansible_distribution_major_version|int in [7, 8] )
       or ( ansible_distribution|lower == "redhat" and ansible_distribution_major_version|int in [8, 9] )
-
-- name: Specific config for debian and redhat systems
-  ansible.builtin.include: "{{ ansible_os_family | lower }}.yml"
+      or ( ansible_distribution|lower == "fedora" and ansible_distribution_major_version|int in [38] )
 
 - name: Set sysctl
-  ansible.builtin.include: sysctl.yml
+  ansible.builtin.include_tasks: sysctl.yml
   loop: '{{ sysctl_d | dict2items }}'
   loop_control:
     loop_var: outer_item
