--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,9 +1,10 @@
 # vim: ai et ts=2 st=2 sw=2 :
 ---
-- hosts: all
+- name: Test sysctl role
+  hosts: all
   become: true
   roles:
-    - role: ../../.
+    - role: ../../.  # noqa role-name[path]
       sysctl_exclusive: false
       sysctl_d:
         50-network-100ms.conf:
