--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,14 +2,31 @@
 ---
 - name: Check if we're running supported os
   ansible.builtin.assert:
-    fail_msg: "{{ role_name }} only supports ubuntu versions 16, 18, 20, 22,   centos versions 7, centos strem versions 8, rhel versions 8, 9!"
+    fail_msg: "{{ role_name }} does not support {{ ansible_distribution }} version {{ ansible_distribution_version }}"
     success_msg: "{{ role_name }} supports {{ ansible_distribution }} version {{ ansible_distribution_version }}"
     quiet: "{{ not ansible_check_mode }}"
     that:
-      ( ansible_distribution|lower == "ubuntu" and ansible_distribution_version|int in [16, 18, 20, 22, 24] )
-      or ( ansible_distribution|lower == "centos" and ansible_distribution_major_version|int in [7, 8] )
-      or ( ansible_distribution|lower == "redhat" and ansible_distribution_major_version|int in [8, 9] )
-      or ( ansible_distribution|lower == "fedora" and ansible_distribution_major_version|int in [38, 39] )
+      - >-
+        ansible_distribution|lower in
+          (__packages_supported_platforms |
+            map(attribute='name') |
+            map('lower'))
+        and
+        ("all" in (__packages_supported_platforms |
+            json_query("[?name=='" + ansible_distribution + "'].versions[]"))
+          or
+          ansible_distribution_release|lower in
+            (__packages_supported_platforms |
+              json_query("[?name=='" + ansible_distribution + "'].versions[]"))
+          or
+          ansible_distribution_major_version|lower in
+            (__packages_supported_platforms |
+              json_query("[?name=='" + ansible_distribution + "'].versions[]"))
+          or
+          ansible_distribution_version|lower in
+            (__packages_supported_platforms |
+              json_query("[?name=='" + ansible_distribution + "'].versions[]"))
+        )
 
 - name: Set sysctl
   ansible.builtin.include_tasks: sysctl.yml
